Removed the season sectioning

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         </header>
         <main>
             <div class="blocks">
-                <a class="block_container smi_bg" href="./templates/smi/smi.html"><div class="block">SMI</div></a>
-                <a class="block_container sma_bg" href="./templates/sma/sma.html"><div class="block">SMA</div></a>
-                <a class="block_container smp_bg" href="./templates/smp/smp.html"><div class="block">SMP</div></a>
-                <a class="block_container smc_bg" href="./templates/smc/smc.html"><div class="block">SMC</div></a>
-                <a class="block_container sv_bg" href="./templates/sv/sv.html"><div class="block">SV</div></a>
-                <a class="block_container stu_bg" href="./templates/stu/stu.html"><div class="block">STU</div></a>
-                <a class="block_container seg_bg" href="./templates/seg/seg.html"><div class="block">SEG</div></a>
-                <a class="block_container geo_bg" href="./templates/geo/geo.html"><div class="block">GEO</div></a>
-                <a class="block_container ea_bg" href="./templates/ea/ea.html"><div class="block">EA</div></a>
+                <a class="block_container smi_bg" href="./filieres/smi/"><div class="block">SMI</div></a>
+                <!--<a class="block_container sma_bg" href="./filieres/sma/"><div class="block">SMA</div></a>
+                <a class="block_container smp_bg" href="./filieres/smp/"><div class="block">SMP</div></a>
+                <a class="block_container smc_bg" href="./filieres/smc/"><div class="block">SMC</div></a>
+                <a class="block_container sv_bg" href="./filieres/sv/"><div class="block">SV</div></a>
+                <a class="block_container stu_bg" href="./filieres/stu/"><div class="block">STU</div></a>
+                <a class="block_container seg_bg" href="./filieres/seg/"><div class="block">SEG</div></a>
+                <a class="block_container geo_bg" href="./filieres/geo/"><div class="block">GEO</div></a>
+                <a class="block_container ea_bg" href="./filieres/ea/"><div class="block">EA</div></a>
+                -->
             </div>
         </main>
         <footer>MADE WITH BY FPK CLUB</footer>
