--- a/filieres/smi/index.html
+++ b/filieres/smi/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bibliothèque</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>SMI - FPK Bibliothèque</title>
         <link rel="stylesheet" href="../../static/css/universal.css"/>
     </head>
     <body>
@@ -17,11 +18,11 @@
                 <a class="block_container smi_bg" href="./s1/"><div class="block">S1</div></a>
                 <a class="block_container smi_bg" href="./s2/"><div class="block">S2</div></a>
                 <a class="block_container smi_bg" href="./s3/"><div class="block">S3</div></a>
-                <a class="block_container smi_bg" href="./s4/"><div class="block">S4</div></a>
+                <!--<a class="block_container smi_bg" href="./s4/"><div class="block">S4</div></a>
                 <a class="block_container smi_bg" href="./s5/"><div class="block">S5</div></a>
-                <a class="block_container smi_bg" href="./s6/"><div class="block">S6</div></a>
+                <a class="block_container smi_bg" href="./s6/"><div class="block">S6</div></a>-->
             </div>
         </main>
-        <footer>MADE WITH BY FPK CLUB</footer>
+        <footer>FPK</footer>
     </body>
 </html>
