--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FPK</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>FPK Bibliothèque</title>
         <link rel="stylesheet" href="static/css/universal.css"/>
         <link rel="stylesheet" href="style.css"/>
     </head>
@@ -24,6 +25,6 @@
                 -->
             </div>
         </main>
-        <footer>MADE WITH BY FPK CLUB</footer>
+        <footer>FPK</footer>
     </body>
 </html>
