--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bibliothèque</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>SMI S1 - FPK Bibliothèque</title>
         <link rel="stylesheet" href="../../../static/css/universal.css"/>
         <link rel="stylesheet" href="../../../static/css/page.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
