--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>SMI S3 - Bibliothèque</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>SMI S3 - FPK Bibliothèque</title>
         <link rel="stylesheet" href="../../../static/css/universal.css"/>
         <link rel="stylesheet" href="../../../static/css/page.css"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -20,6 +21,7 @@
                     <h3>Programmation 1 :</h3>
                     <ul class="docs_list">
                         <li><b>Cour.pdf</b> | <i><a href="https://drive.google.com/file/d/15CEnWNsnSx4-f2pFJxmZNDR8N2rHuV6d/view?usp=share_link">voir</a></i></li>
+                        <li><b>Algorithmique & Langage C.pdf</b> | <i><a href="https://drive.google.com/file/d/17B4MIDiRTLmPjlIOdZYK95C6lMWZR7P0/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -105,6 +107,6 @@
                 </div>
             </div>
         </main>
-        <footer>MADE WITH BY FPK CLUB</footer>
+        <footer>FPK</footer>
     </body>
 </html>
