--- a/filieres/sv/sv.html
+++ b/filieres/sv/sv.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bibliothèque</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>SV - FPK Bibliothèque</title>
         <link rel="stylesheet" href="../../static/css/universal.css"/>
     </head>
     <body>
