added more files

--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -20,11 +20,33 @@
                 <div class="module">
                     <h3>Analyse 1 :</h3>
                     <ul class="docs_list">
-                        <li><b>Document 1</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 2</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 3</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 4</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 5</b> | <i><a href="#">voir</a></i></li>
+                        <li><b>Cours - Touts les chapitres.pdf</b> | <i><a href="https://drive.google.com/file/d/11nWuGdvrJnnzxlJK46apemj6gyBtugSz/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1kBoOH1ECeqRkV6Rio6XTIQfdDZDpaFn2/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1xevxsJT0xBWGWgCHg4pP5kRAGfGBtw6l/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/13I4OhxQsH24kUsapRLKoL6JNahGQLg82/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1E5wiA0wxD22um-L2N5CGyqRrhacI6OC2/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1ecOMRaahrP-SsPfOz9lUqQfLYNPkekht/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours (Slide) - Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/16VzkY7EkqJ24yNETE6dfIDIwF6cMgNFW/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours (Slide) - Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/14snEgOfHHHZptp4bH02Q9ibhpp9H6clY/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours (Slide) - Chapitre 3, 4, .pdf</b> | <i><a href="https://drive.google.com/file/d/1NdxQlX_THgAeNVcfzNBA40B0_MVEQSLn/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/15O7qkNdLm2WtOl83XU6TysAUj3Uk0c6Y/view?usp=sharing">voir</a></i></li>
+                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1SQTfJoX81ePScn7A1nXFdk94uK86-Rhb/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1hvhyk_t2aRJlew4nN82PqS-e1VL4H9EY/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1Im6F84373BbwVtGpYZ-sA3NBSh60X6OH/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/17sBqFrJVIWi9cvVQQSyiLdJkyMnngSph/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/15rfeBJzDYQJMK-5y24wV1ekg9NK9zfEp/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1B-sZJa0N9XuumvRuBEngYjYu0FHRGcTi/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1TJCjACkt9KRUHOdJgfI2LVMl8U24p2XS/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2016_2017 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/16LWzpzTVAcgg3ML2JWOqL6GOSdlD169H/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2016_2017 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1YYrDpMkw7hyyGywxlpYBWwILJox4bnoW/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2017_2018 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1aso3XGJNcs1eF8nnhBf6n0rF9GRBr6sN/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2017_2018 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1CSxnB9XgueKhXWKPgg3IDP7TeAs6nHLu/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1d0oI3K_zt2KZWzWSs2Uk58d_l493JveP/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1u5w2lsdqZHAdiyG8S3jxa7sJ8hiAyfz9/view?usp=sharing">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1JtABbUQU86GMOxUWyPSGIBxEN87XY6Zv/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1KkZSEIoz3vhipKKjr_S9CGa_7qup34Zm/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 Normale (Corrigé).pdf</b> | <i><a href="https://drive.google.com/file/d/158D2H-o6mnuWDmdgzdqeT2p4GuxPlxFB/view?usp=sharing">voir</a></i></li>
+                        <li><b>Examens + correction.pdf</b> | <i><a href="https://drive.google.com/file/d/1vwGCmdONCOZl13gv_R0uuqRbI26sqAxd/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -53,27 +75,42 @@
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Physique 1 :</h3>
+                    <h3>Physique 1 - Mécanique :</h3>
                     <ul class="docs_list">
-                        <li><b>Document 1</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 2</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 3</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 4</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 5</b> | <i><a href="#">voir</a></i></li>
+                        <li><b>Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1vwGCmdONCOZl13gv_R0uuqRbI26sqAxd/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/11W26uaHeMRFZdvnyaiqMqgoF8fXPgBGL/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1UW_yVLYcaiGskdX0kT_kKadKTNrHlbh_/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1TWtCYmhZogRPtUZHbLxBojAsK4i5Vfyg/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1jQUy-ORvpHNgIfF3wkTrAzuywzeIpoxc/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1oPOtM7ZwPlOu9-vSubuZ044o-ii2CUqJ/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1DiamdDAs6-SdeHlE9jqjEnY3wpbN0hP8/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1TrK6UcFdtl9mKU1U9uWDx0kSnOJGdtFi/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1GmRQgcnPsLoTaeGq7dAE0lFWwoTPHN3r/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Physique 2 :</h3>
+                    <h3>Physique 2 - Thermodynamique :</h3>
                     <ul class="docs_list">
-                        <li><b>Document 1</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 2</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 3</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 4</b> | <i><a href="#">voir</a></i></li>
-                        <li><b>Document 5</b> | <i><a href="#">voir</a></i></li>
+                        <li><b>Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/10_1rC6c7xdNu4iArgalgpVDU9ie06g7R/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1CCyWRpkabOKgaW4VHNFeDoVyhLPsWGUb/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1eNXMHQwP5TxwRqZgHGhhLlt8mQfE_Y4_/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1nOSf9S1QwmUDXu3aAsAm1EtJOzEU-wTZ/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1UtUtoySyx9d6kP5NW_HUUvyE_tftSix1/view?usp=share_link">voir</a></i></li>
+                        <li><b>Chapitre 6.pdf</b> | <i><a href="https://drive.google.com/file/d/1eSe2XRdTX6QyJ87oYUfD6Q5ja-hcuqkS/view?usp=sharing">voir</a></i></li>
+                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1Vy4aKOThzhwyQGljwoeaIuX8JJjVcnxe/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1GggOsssYszMXvY7UG1iWG1SpUgKTYQuH/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1g_Q3j9UD51UbDZ4nc4dVwLC7-tiFGBKx/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1v8LGtMxRNmQmf9blu6VjBg-j5SCO95nU/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/18lhLIKFB6MvbAsgz6jb05unZEe9h3nwj/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2017_2018 Normale.jpg</b> | <i><a href="https://drive.google.com/file/d/1pav54-iFCLp964AiNkz22YbOCazW1YtK/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2019_2020 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1OyzDj_1zOBCvQp1FVjoPpK3OD5zh8Ijy/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2019_2020 Ratrappage.pdf</b> | <i><a href="https://drive.google.com/file/d/1Sna2iNdOlbbx8ggPIE_vaMLtC4Fm823j/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2020_2021 Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1vgLvPgQCzuQnfYfyw_KnlzZkKaj_qZjL/view?usp=share_link">voir</a></i></li>
+                        <li><b>Examen 2021_2022 Ratrappage.pdf</b> | <i><a href="https://drive.google.com/file/d/1TAWCOrzQrOFN5eI2j4v0uBEaGTmuHZmk/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Informatique</h3>
+                    <h3>Informatique 1 :</h3>
                     <ul class="docs_list">
                         <li><b>Cours.ppt</b> | <i><a href="https://docs.google.com/document/d/1VWac24lrKB1DaounHY6xmFiyJLpBPOnW/edit?usp=share_link&ouid=117943220177420948797&rtpof=true&sd=true">voir</a></i></li>
                         <li><b>Rappel de Cours et TD.pdf</b> | <i><a href="https://drive.google.com/file/d/1hYub-SXT_OBgWw2_CLelTE8rTTpyq1XA/view?usp=share_link">voir</a></i></li>
@@ -85,7 +122,7 @@
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Langue et Terminologie</h3>
+                    <h3>Langue et Terminologie 1 :</h3>
                     <ul class="docs_list">
                         <li><b>Cours.pdf</b> | <i><a href="https://drive.google.com/file/d/1zQDDXCK_XVTXPHgDNoOisSWCmKwpeoL9/view?usp=share_link">voir</a></i></li>
                     </ul>
