--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -97,12 +97,13 @@
                         <li><b>TP 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1O-QFRDXWtSy981Vn6rGVWbFg2Le9Tp1G/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1j2_cLHu7nW1F1WP1AtDS_IkJb0yU7m2Q/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1EPtWMLreEaQqf_ECX7r25tKc3CHukK3r/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 (1) .jpg</b> | <i><a href="https://drive.google.com/file/d/1nUT7QldCoYREVYd02kh2tC50yG9QYlJ3/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 (2) .jpg</b> | <i><a href="https://drive.google.com/file/d/1oJw2XcSc_v-4ZIYEoYYigNtLFtahcAXb/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 (1) .jpg</b> | <i><a href="https://drive.google.com/file/d/1xBTHzVmZ1jSNNn7QbLu16evp7bX1WXul/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 (2) .jpg</b> | <i><a href="https://drive.google.com/file/d/1T40HDuuUbBoyyTOm29JTpHQfkWnCe9Pb/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2020_2021 (1) .jpg</b> | <i><a href="https://drive.google.com/file/d/1WNv7379O-fWQNwpEyYLC-FQB25rswpQN/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2020_2021 (2) .jpg</b> | <i><a href="https://drive.google.com/file/d/1pKj0cH4A-ezyFUoTxg9dQXw308GEMHrx/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 - Normale (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1nUT7QldCoYREVYd02kh2tC50yG9QYlJ3/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 - Normale (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1oJw2XcSc_v-4ZIYEoYYigNtLFtahcAXb/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 - Rattrapage (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1xBTHzVmZ1jSNNn7QbLu16evp7bX1WXul/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 - Rattrapage (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1T40HDuuUbBoyyTOm29JTpHQfkWnCe9Pb/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 - Rattrapage (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1WNv7379O-fWQNwpEyYLC-FQB25rswpQN/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 - Rattrapage (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1pKj0cH4A-ezyFUoTxg9dQXw308GEMHrx/view?usp=share_link">voir</a></i></li>
+                        <li><b>Portes Logique (Resume).pdf</b> | <i><a href="https://drive.google.com/file/d/1XWYZvWnHhwJ26UJZHigPXqIys790ezfd/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
             </div>
