added google analytics tags

--- a/filieres/smi/s1/index.html
+++ b/filieres/smi/s1/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP8XY8F3TS"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-NP8XY8F3TS');
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>SMI S1 - FPK Bibliothèque</title>
         <link rel="stylesheet" href="../../../static/css/universal.css"/>
@@ -50,7 +59,7 @@
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Algebre 1 :</h3>
+                    <h3>Algèbre 1 :</h3>
                     <ul class="docs_list">
                         <li><b>Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1BxfTnmVXap-3250RWcTbLhpcjpIqcrd-/view?usp=share_link">voir</a></i></li>
                         <li><b>Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1pXDoDjx8y7muMoYDpHLIiCQahW1CTXed/view?usp=share_link">voir</a></i></li>
@@ -64,7 +73,7 @@
                     </ul>
                 </div>
                 <div class="module">
-                    <h3>Algebre 2 :</h3>
+                    <h3>Algèbre 2 :</h3>
                     <ul class="docs_list">
                         <li><b>Chapitre 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1hqDiiMhxtMkDBiLW2m6BnQAtReCFcs1U/view?usp=share_link">voir</a></i></li>
                         <li><b>Chapitre 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1hCyhghbd5CHtBEsanEyJW6eOzQx155Kj/view?usp=share_link">voir</a></i></li>
