--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NP8XY8F3TS"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-NP8XY8F3TS');
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>FPK Bibliothèque</title>
         <link rel="stylesheet" href="static/css/universal.css"/>
