finished adding SMI S3 files

--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -29,8 +29,12 @@
                 <div class="module">
                     <h3>Programmation 1 :</h3>
                     <ul class="docs_list">
-                        <li><b>Cour.pdf</b> | <i><a href="https://drive.google.com/file/d/15CEnWNsnSx4-f2pFJxmZNDR8N2rHuV6d/view?usp=share_link">voir</a></i></li>
-                        <li><b>Algorithmique & Langage C.pdf</b> | <i><a href="https://drive.google.com/file/d/17B4MIDiRTLmPjlIOdZYK95C6lMWZR7P0/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/1Qed5o6U4lgXgUPJBuL6GOKa2xGwSDkf8/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours 2020_2021.pdf</b> | <i><a href="https://drive.google.com/file/d/15CEnWNsnSx4-f2pFJxmZNDR8N2rHuV6d/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1VLlNEvC7aOe1vYQLuwguTG2zpTUEMnxb/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1ly9Hac3JwPWbmIxv9yOdr05iU1slixwN/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1IIZdQkEoHrXokhSboFpIB1Abeai2gLr_/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1rfmd55kCjI5FL9vycwC9kr_bzEYUp93R/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -48,7 +52,8 @@
                     <ul class="docs_list">
                         <li><b>Cours.pdf</b> | <i><a href="https://drive.google.com/file/d/1J6O9a-lWTMOntXqwI856IM5OLVmQxzHe/view?usp=share_link">voir</a></i></li>
                         <li><b>TD.pdf</b> | <i><a href="https://drive.google.com/file/d/1f26dZXOIVXEYGJfjqJkXYOc0sSoHD1E2/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2020/2021 - Normale.jpeg</b> | <i><a href="https://drive.google.com/file/d/1SCQJSCHxdV8df1HLTxBlD10HsciYE0y2/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 - Normale.jpeg</b> | <i><a href="https://drive.google.com/file/d/1SCQJSCHxdV8df1HLTxBlD10HsciYE0y2/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2021_2022 - Rattrapage.jpeg</b> | <i><a href="https://drive.google.com/file/d/150ekk2ReKiTzESXjIg_mYxGOPkRsMtCA/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -71,11 +76,11 @@
                         <li><b>Correction du devoir 2020-2021 .pdf</b> | <i><a href="https://drive.google.com/file/d/1iU0Zs9H6y8Bp8y0CyTWRD2svGQ2rM67Y/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 1 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1DRSEfToXmeNI2xuS9EBGSV1fLsYsPHsn/view?usp=share_link">voir</a></i></li>
                         <li><b>Controle 2 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1_qJQsW92tCXapNEYU6HopbZHUtePRMOP/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2017-2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1M3NMgsiTAKp2qIukjls0TS4HsG-LLh8a/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018-2019 Normal .pdf</b> | <i><a href="https://drive.google.com/file/d/1TavY5fs4L5o_INnPaZ1ssE9gQRacaRPh/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018-2019 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/10BuAHr1VrUr6fTkB_YR42IJWKNyJnlzp/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019-2020 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1g71fb7W_b_HuNxoH1RRqdFWLH97Gc35c/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019-2020 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1MtHdq1yMN1dyhpGesDMxCrO21zbX1Omm/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2017_2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1M3NMgsiTAKp2qIukjls0TS4HsG-LLh8a/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Normal .pdf</b> | <i><a href="https://drive.google.com/file/d/1TavY5fs4L5o_INnPaZ1ssE9gQRacaRPh/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/10BuAHr1VrUr6fTkB_YR42IJWKNyJnlzp/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1g71fb7W_b_HuNxoH1RRqdFWLH97Gc35c/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1MtHdq1yMN1dyhpGesDMxCrO21zbX1Omm/view?usp=share_link">voir</a></i></li>
                         <li><b>Jeux de Cartes.pdf</b> | <i><a href="https://drive.google.com/file/d/1tXs0whV4o3SQ9u0DQ1FTeCqEq6vBJ6un/view?usp=share_link">voir</a></i></li>
                         <li><b>Table de Gauss.pdf</b> | <i><a href="https://drive.google.com/file/d/1m9yX3SnLe1YLHUyiOOijXcSiz5ttxq5x/view?usp=share_link">voir</a></i></li>
                     </ul>
@@ -83,8 +88,12 @@
                 <div class="module">
                     <h3>Technologie du Web :</h3>
                     <ul class="docs_list">
-                        <li><b>Cours HTML.pdf</b> | <i><a href="https://drive.google.com/file/d/1lq3nRHVNezbB_9DX-SMWLUta2fTRqATA/view?usp=share_link">voir</a></i></li>
-                        <li><b>Cours Javascript.pdf</b> | <i><a href="https://drive.google.com/file/d/1DSObKCLojcJJ1dBPGGuIWncNJtVCqBk0/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - HTML (Résumé).pdf</b> | <i><a href="https://drive.google.com/file/d/1lq3nRHVNezbB_9DX-SMWLUta2fTRqATA/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Cours de CSS.pdf</b> | <i><a href="https://drive.google.com/file/d/1AFuj9Wkm6WKBoLzZuPllUMlBu71Hs9JQ/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Structurez votre page.pdf</b> | <i><a href="https://drive.google.com/file/d/1-rOrv_XLpyNzyZzyPl2DxLJ7kHo6DpwH/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Cours de JavaScript.pdf</b> | <i><a href="https://drive.google.com/file/d/1DSObKCLojcJJ1dBPGGuIWncNJtVCqBk0/view?usp=share_link">voir</a></i></li>
+                        <li><b>Cours - Cours de JavaScript (Résumé).pdf</b> | <i><a href="https://drive.google.com/file/d/1ZlSoULJkWREgRYFKJF1QJNiH3MnQuH7V/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 - Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1Cexw6AEwokCWlhy47j9bOb8yPLkftS5t/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
@@ -106,12 +115,11 @@
                         <li><b>TP 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1O-QFRDXWtSy981Vn6rGVWbFg2Le9Tp1G/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1j2_cLHu7nW1F1WP1AtDS_IkJb0yU7m2Q/view?usp=share_link">voir</a></i></li>
                         <li><b>TP 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1EPtWMLreEaQqf_ECX7r25tKc3CHukK3r/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 - Normale (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1nUT7QldCoYREVYd02kh2tC50yG9QYlJ3/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 - Normale (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1oJw2XcSc_v-4ZIYEoYYigNtLFtahcAXb/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 - Rattrapage (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1xBTHzVmZ1jSNNn7QbLu16evp7bX1WXul/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 - Rattrapage (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1T40HDuuUbBoyyTOm29JTpHQfkWnCe9Pb/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2020_2021 - Rattrapage (1).jpg</b> | <i><a href="https://drive.google.com/file/d/1WNv7379O-fWQNwpEyYLC-FQB25rswpQN/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2020_2021 - Rattrapage (2).jpg</b> | <i><a href="https://drive.google.com/file/d/1pKj0cH4A-ezyFUoTxg9dQXw308GEMHrx/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 - Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/1A1uZxJ2Cxbjo6tMIsPp5YtODUJxaVtih/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 - Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1CGYhYEsPRIAco1OXVJjCJFJn_VsO-WEX/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2020_2021 - Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1XssOX0a27WtHRtlv1_jd7LU9CDjbqy2z/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2021_2022 - Normale.pdf</b> | <i><a href="https://drive.google.com/file/d/15Q6ExFaroNOs4NzhCByNV5MvpBQd7s0k/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2021_2022 - Rattrapage.pdf</b> | <i><a href="https://drive.google.com/file/d/1hMyyy8A1CvdsD2bzd9AgofoWHH0fLD5B/view?usp=share_link">voir</a></i></li>
                         <li><b>Portes Logique (Resume).pdf</b> | <i><a href="https://drive.google.com/file/d/1XWYZvWnHhwJ26UJZHigPXqIys790ezfd/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
