fixed some files

--- a/filieres/smi/s3/index.html
+++ b/filieres/smi/s3/index.html
@@ -64,25 +64,29 @@
                         <li><b>Chapitre 3.pdf</b> | <i><a href="https://drive.google.com/file/d/149PMD_yHtnvuYdsj6o99pEvt0lZo1HpL/view?usp=share_link">voir</a></i></li>
                         <li><b>Chapitre 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1ldy7TwJ1eJBlZVgG5y39MXaDLOnyVlXG/view?usp=share_link">voir</a></i></li>
                         <li><b>Chapitre 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1jFWJ9fAsdhbfSibLGE5hwCP0HGvEjTir/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/16qfp6y1Mvh382WeIWlkYYTEUbYwYa0gq/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1gVvRM9UxpkY-7yFROIRkLRuf762gXTLC/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/1nHx1YkiAuN9dk1K61nXDNilZGg7QKFot/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1qlPcGxEydQElQot0n_aG3jUghFdSNrL_/view?usp=share_link">voir</a></i></li>
-                        <li><b>TD 5.pdf</b> | <i><a href="https://drive.google.com/file/d/14oq7mVW9NgnZOohI-Md_Zu2rhOrl7E4p/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction de TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/1HENiIu_TeJ_m7cpvYANxk0gIDXHCvRLG/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction de TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1O5UfQqO9HtmyPwYZQbqQPFaQWiye1ORx/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction de TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/12r9LLQYUnO7AK1pAi70PRQkvfd589LHC/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction de TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1VG8DUlxH19aihSy_EZP3k3gsCYz14AL9/view?usp=share_link">voir</a></i></li>
-                        <li><b>Correction du devoir 2020-2021 .pdf</b> | <i><a href="https://drive.google.com/file/d/1iU0Zs9H6y8Bp8y0CyTWRD2svGQ2rM67Y/view?usp=share_link">voir</a></i></li>
-                        <li><b>Controle 1 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1DRSEfToXmeNI2xuS9EBGSV1fLsYsPHsn/view?usp=share_link">voir</a></i></li>
-                        <li><b>Controle 2 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1_qJQsW92tCXapNEYU6HopbZHUtePRMOP/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2017_2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1M3NMgsiTAKp2qIukjls0TS4HsG-LLh8a/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 Normal .pdf</b> | <i><a href="https://drive.google.com/file/d/1TavY5fs4L5o_INnPaZ1ssE9gQRacaRPh/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2018_2019 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/10BuAHr1VrUr6fTkB_YR42IJWKNyJnlzp/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1g71fb7W_b_HuNxoH1RRqdFWLH97Gc35c/view?usp=share_link">voir</a></i></li>
-                        <li><b>Exam 2019_2020 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1MtHdq1yMN1dyhpGesDMxCrO21zbX1Omm/view?usp=share_link">voir</a></i></li>
-                        <li><b>Jeux de Cartes.pdf</b> | <i><a href="https://drive.google.com/file/d/1tXs0whV4o3SQ9u0DQ1FTeCqEq6vBJ6un/view?usp=share_link">voir</a></i></li>
-                        <li><b>Table de Gauss.pdf</b> | <i><a href="https://drive.google.com/file/d/1m9yX3SnLe1YLHUyiOOijXcSiz5ttxq5x/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1.pdf</b> | <i><a href="https://drive.google.com/file/d/13FlrssDD05H_i4Kr7F3Nm3_1tVPsyBvs/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1LcEzaRXXuFr4YsrwrKy_uLTmYiIUbF-y/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/1mv5kuMZBIuApUTnZbZTdOsXifsLCxNGS/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 1 - 2022_2023 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1yt-NqQu-EJYnFkx0AUDyenRpoqpqX25p/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2.pdf</b> | <i><a href="https://drive.google.com/file/d/1AoFCPAK5cZ_4BMOdFVzky1aM4_sWYoAR/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/17KaYGgV6-M-lcXZvnVkK7IDfS4eKFzUh/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2 - 2022_2023.pdf</b> | <i><a href="https://drive.google.com/file/d/11TL0oTN0eTWT4fln17fTDJk9M_LQzcAL/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 2 - 2022_2023 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1C_1SqfXGJdqtb9BOOSbBVXoKkkT_ngRs/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3.pdf</b> | <i><a href="https://drive.google.com/file/d/15InlVdZKTx_etEp94VtsOO5snydQhYgN/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 3 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1jIBXWh7ytXxx-aooWtulXT_hJVeWF2mU/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4.pdf</b> | <i><a href="https://drive.google.com/file/d/1GCQ7uhq-iMV9KpGMVDbI0Hdcs2fSEJsa/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 4 (Correction).pdf</b> | <i><a href="https://drive.google.com/file/d/1Zm6nAW3jEKdJoXvc547rITwkuM472y13/view?usp=share_link">voir</a></i></li>
+                        <li><b>TD 5.pdf</b> | <i><a href="https://drive.google.com/file/d/1CQAYV1y8hjVBRbofS-d5SedIii2Bp6SP/view?usp=share_link">voir</a></i></li>
+                        <li><b>Controle 1 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/16981YCUAa2x9TADQauc9Ld4Cl4VNSVr7/view?usp=share_link">voir</a></i></li>
+                        <li><b>Controle 2 2017-2018 .pdf</b> | <i><a href="https://drive.google.com/file/d/1c0DhKXGZ-ZCb1iqQuSG7kv0ZoZOfSKx5/view?usp=share_link">voir</a></i></li>
+                        <li><b>Correction du devoir 2020-2021 .pdf</b> | <i><a href="https://drive.google.com/file/d/1gT5-T49YQixILOduQ0OCHJczTWjxvQ8g/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2017_2018 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1XhrbXaED0-kv0FOYpIq0hXqTTxD1Lj8y/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1ZdP9GH97v4elx10zcSY_jupdnVxouGVy/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2018_2019 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1fezIEaOxLE-64FU9TYiiGfYuZKkoIImD/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Normale .pdf</b> | <i><a href="https://drive.google.com/file/d/1Vpq-LKIo2iUdqY0SZ3_bcOCJZZIJCBPL/view?usp=share_link">voir</a></i></li>
+                        <li><b>Exam 2019_2020 Rattrapage .pdf</b> | <i><a href="https://drive.google.com/file/d/1kOoTfs50W09mTw8QW6O5l6rqbKFDK7RI/view?usp=share_link">voir</a></i></li>
+                        <li><b>Jeux de Cartes.pdf</b> | <i><a href="https://drive.google.com/file/d/1M_audk1553NX2ODKhkjBbSs7gFNsUInh/view?usp=share_link">voir</a></i></li>
+                        <li><b>Table de Gauss.pdf</b> | <i><a href="https://drive.google.com/file/d/1SYXi5vXlZbctjbp6pbE8oXzFWiK0niJx/view?usp=share_link">voir</a></i></li>
                     </ul>
                 </div>
                 <div class="module">
